[build-system]
requires = ["setuptools>=61.2", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "MorphCT"
description = "Using the Marcus Hoping model, caclulates charge mobility from atomistic molecular dynamics morphologies."
readme = "README.md"
authors = [
  {name = "Eric Jankowski", email = "ericjankowski@boisestate.edu"}
]
license= {text = "GPLv3"}
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/cmelab/morphct"}
requires-python = ">=3.7"
dynamic = ["version"]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["morphct*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "morphct.__version__"}
